--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,41 @@
-/* Layout */
+/*
+ * Layout
+ */
+
 body > header,
 body > main > section,
 body > footer {
   padding: 0 12.5vw;
   margin: 0 auto;
-  border-top: 2px solid #dde2e2;
+  border-top: 1px solid #dde2e2;
   clear: both;
+}
+
+/* header */
+body > header {
+  height: 61.8vh;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: #273940;
+  color: white;
+}
+
+#header-background-img {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  opacity: 0.1;
+  -webkit-filter: grayscale(100%) contrast(200%); /* Chrome, Safari, Opera */
+  filter: grayscale(100%) contrast(200%);
+}
+
+/* content */
+body > main > section:first-of-type {
+  border-color: #6c8181;
 }
 
 section > h2 {
@@ -20,6 +50,29 @@ section > section {
   margin: 1.7em 0 3em;
 }
 
+figure.full {
+  position: relative;
+  width: 75vw;
+  left: calc(-75vw*0.4);
+  margin: 0;
+}
+
+figure.aside {
+  position: absolute;
+  width: calc(75vw*0.3);
+  left: 12.5vw;
+  margin: 0;
+}
+
+figure.aside.persona {
+  margin-top: -5em;
+}
+
+figure img {
+  width: 100%;
+}
+
+/* alternating layout */
 .alt > h2 {
   float: right;
 }
@@ -30,30 +83,18 @@ section > section {
   float: left;
 }
 
-@media only screen and (max-width: 960px) {
-  body > header,
-  body > main > section,
-  body > footer {
-    padding-left: 5vw;
-    padding-right: 5vw;
-  }
-
-  section > h2,
-  section > section {
-    width: 100% !important;
-    float: left !important;
-    padding: 0 !important;
-  }
-
-  section > h2 {
-    margin-bottom: 0;
-  }
-  section > section {
-    margin: 0 0 2em;
-  }
+.alt figure.full {
+  left: auto;
 }
 
-/* Typography & color*/
+.alt figure.aside {
+  left: auto;
+  right: 12.5vw;
+}
+
+
+
+/* Typography */
 body {
   font-family: 'Lora', serif;
   font-size: 1.25em;
@@ -74,10 +115,6 @@ h3, h4 {
   color: #a02b3b;
 }
 
-header h1, header h2 {
-  color: inherit;
-}
-
 h2 {
   font-weight: bold;
   font-size: 2em;
@@ -85,6 +122,103 @@ h2 {
 
 h2::after {
   display: block;
-  content: '–';
-  font-weight: lighter;
+  content: '';
+  height: 1px;
+  width: 1.5em;
+  margin: .5em 0;
+  background: #a02b3b;
+}
+
+table {
+  width: 100%;
+  border-spacing: 0;
+}
+
+table tr:nth-of-type(2n-1){
+  background: #eee;
+}
+
+figcaption {
+  font-family: 'Montserrat', sans-serif;
+  font-size: .8em;
+}
+
+/* header */
+body > header h1,
+body > header h2,
+body > header time {
+  color: inherit;
+  text-align: center;
+}
+
+body > header h2 {
+  font-size: 1em;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  opacity: .7;
+  margin-top: 0;
+}
+
+body > header h2::after {
+  display: none;
+}
+
+body > header time {
+  font-size: 1em;
+  opacity: .5;
+}
+
+/* layout for small screens */
+@media only screen and (max-width: 960px) {
+  body > header,
+  body > main > section,
+  body > footer {
+    padding-left: 5vw;
+    padding-right: 5vw;
+  }
+
+  #header-background-img {
+    width: auto;
+    height: 100%;
+  }
+
+  section > h2,
+  section > section {
+    width: 100% !important;
+    float: left !important;
+    padding: 0 !important;
+  }
+
+  figure.aside {
+    position: static !important;
+    float: right !important;
+    right: auto !important;
+    width: 40% !important;
+    margin: 0 0 1.5em 10% !important;
+  }
+
+  figure.aside.persona {
+    margin-top: 0 !important;
+  }
+
+  figure.full {
+    position: static !important;
+    float: left !important;
+    width: 100% !important;
+    margin: 0 0 1.5em !important;
+  }
+
+  section > h2 {
+    margin-bottom: 0;
+  }
+  section > section {
+    margin: 0 0 2em;
+  }
+}
+
+/* smaller text on mobile */
+@media only screen and (max-width: 500px) {
+  body {
+    font-size: 1em;
+  }
 }
