updated text and images with final version, checked validation

--- a/Documents/css/styles.css
+++ b/Documents/css/styles.css
@@ -29,7 +29,6 @@ body > header {
   left: 0;
   top: 0;
   opacity: 0.1;
-  -webkit-filter: grayscale(100%) contrast(200%); /* Chrome, Safari, Opera (breaks validation) */
   filter: grayscale(100%) contrast(200%);
 }
 
@@ -43,25 +42,28 @@ section > h2 {
   float: left;
 }
 
-section > section {
+section > div {
   width: 60%;
   float: right;
   padding-left: 10%;
   margin: 1.7em 0 3em;
 }
 
+figure {
+  margin: 0;
+}
+
+/* position the figure in full width */
 figure.full {
   position: relative;
   width: 75vw;
   left: calc(-75vw*0.4);
-  margin: 0;
 }
 
 figure.aside {
   position: absolute;
   width: calc(75vw*0.3);
   left: 12.5vw;
-  margin: 0;
 }
 
 figure.aside.persona {
@@ -77,7 +79,7 @@ figure img {
   float: right;
 }
 
-.alt > section {
+.alt > div {
   padding-left: 0;
   padding-right: 10%;
   float: left;
@@ -100,17 +102,9 @@ body {
   color: #395858;
 }
 
-::selection { /* not valid, removed from css3 draft */
-  background: #fffa8d;
-}
-
 h1, h2, h3, h4 {
   font-family: 'Montserrat', sans-serif;
   color: #e1223d;
-}
-
-h3, h4 {
-  color: #a02b3b;
 }
 
 h2 {
@@ -127,6 +121,14 @@ h2::after {
   background: #a02b3b;
 }
 
+h3 {
+  color: #a02b3b;
+}
+
+h4 {
+  color: #395858;
+}
+
 table {
   width: 100%;
   border-spacing: 0;
@@ -139,6 +141,7 @@ table tr:nth-of-type(2n-1){
 figcaption {
   font-family: 'Montserrat', sans-serif;
   font-size: .8em;
+  opacity: .8;
 }
 
 /* header */
@@ -167,7 +170,7 @@ body > header time {
 }
 
 /* layout for small screens, mobile included */
-@media only screen and (max-width: 960px), only screen and (max-device-width: 960px)  {
+@media only screen and (max-width: 960px), only screen and (max-device-width: 960px) {
   body > header,
   body > main > section,
   body > footer {
@@ -181,7 +184,7 @@ body > header time {
   }
 
   section > h2,
-  section > section {
+  section > div {
     width: 100% !important;
     float: left !important;
     padding: 0 !important;
@@ -218,5 +221,12 @@ body > header time {
 @media only screen and (max-width: 500px), only screen and (max-device-width: 500px) {
   body {
     font-size: 1em;
+  }
+}
+
+/* smaller aside images on large screens */
+@media only screen and (min-width: 1600px){
+  figure.aside {
+    width: calc(75vw*0.2) !important;
   }
 }
