--- a/Template/index.html
+++ b/Template/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Da Carlo Template</title>
+
+    <!-- define viewport to ensure no horizontal scroll -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- include stylesheets -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -10,6 +15,8 @@
   <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 
   <body>
+
+    <!-- page header and global navigation -->
     <header>
       <!-- logo -->
       <h1>Da Carlo Catering</h1>
@@ -26,6 +33,7 @@
       </div>
     </header>
 
+    <!-- page content -->
     <main>
       <section class="intro">
         <div class="container">
@@ -54,6 +62,7 @@
           </div>
         </div>
       </section>
+
       <section class="row">
         <div class="container">
           <div class="box right blue">
@@ -68,6 +77,7 @@
           </figure>
         </div>
       </section>
+
       <section class="row">
         <div class="container">
           <div class="box center">
@@ -79,6 +89,7 @@
           </div>
         </div>
       </section>
+
       <section class="row">
         <div class="container">
           <div class="box full dark">
@@ -92,6 +103,7 @@
       </section>
     </main>
 
+    <!-- call to action -->
     <section class="cta">
       <div class="container">
         <p>Ta kontakt for et uforpliktende tilbud.</p>
@@ -100,6 +112,7 @@
       </div>
     </section>
 
+    <!-- page footer -->
     <footer>
       <div class="container">
         <p>
