--- a/Template/css/style.css
+++ b/Template/css/style.css
@@ -17,6 +17,7 @@ body {
   background: fixed url('../img/webtek_paella.jpeg') no-repeat;
   background-size: cover;
   margin: 0;
+  color: white;
 }
 
 /*
