--- a/Documents/css/styles.css
+++ b/Documents/css/styles.css
@@ -70,6 +70,11 @@ figure.aside.persona {
   margin-top: -5em;
 }
 
+figure.aside.mockup1 {
+margin-top: 10em;
+
+}
+
 figure img {
   width: 100%;
 }
