--- a/Template/index.html
+++ b/Template/index.html
@@ -10,6 +10,11 @@
     <!-- include stylesheets -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- include google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+
   </head>
 
   <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
@@ -20,17 +25,15 @@
     <header>
       <!-- logo -->
       <h1>Da Carlo Catering</h1>
-      <div class="container">
-        <nav>
-          <ul>
-            <li><a href="#">Hjem</a></li>
-            <li><a href="#">Catering</a></li>
-            <li><a href="#">Kantine</a></li>
-            <li><a href="#">Om</a></li>
-            <li><a href="#">Kontakt</a></li>
-          </ul>
-        </nav>
-      </div>
+      <nav>
+        <ul>
+          <li><a class="active" href="#">Hjem</a></li>
+          <li><a href="#">Catering</a></li>
+          <li><a href="#">Kantine</a></li>
+          <li><a href="#">Om</a></li>
+          <li><a href="#">Kontakt</a></li>
+        </ul>
+      </nav>
     </header>
 
     <!-- page content -->
@@ -54,7 +57,7 @@
           <figure>
             <img src="img/en-kokk.jpg" alt="" />
           </figure>
-          <div class="box right tight">
+          <div class="box right tight dark">
             <div class="text-wrapper">
               <p>Lorem ipsum dolor sit amet</p>
               <a href="#" class="button">Lenketekst</a>
@@ -108,7 +111,7 @@
       <div class="container">
         <p>Ta kontakt for et uforpliktende tilbud.</p>
         <p>telefon, epost</p>
-        <a href="#" class="button"></a>
+        <a href="#" class="button">Kontakt oss</a>
       </div>
     </section>
 
