--- a/Documents/css/styles.css
+++ b/Documents/css/styles.css
@@ -70,6 +70,12 @@ figure.aside.persona {
   margin-top: -5em;
 }
 
+/* maias skrollemockup */
+figure.aside.mockup {
+  height: calc(75vw*0.32);
+  overflow-y: scroll;
+}
+
 figure.aside.mockup1 {
   margin-top: 10em;
 
