--- a/Documents/css/styles.css
+++ b/Documents/css/styles.css
@@ -170,6 +170,15 @@ table tr:nth-of-type(2n-1){
   background: #eee;
 }
 
+th,td {
+  text-align: left;
+  padding-right: 15px;
+}
+
+th {
+  background-color: #ccc;
+}
+
 figcaption {
   font-family: 'Montserrat', sans-serif;
   font-size: .8em;
