--- a/Documents/css/styles.css
+++ b/Documents/css/styles.css
@@ -174,11 +174,11 @@ table tr:nth-of-type(2n-1){
 
 th,td {
   text-align: left;
-  padding-right: 15px;
+  padding: 5px 15px 5px 2px;
 }
 
 th {
-  background-color: #ccc;
+  padding: 10px 15px 10px 2px;
 }
 
 figcaption {
