--- a/Template/index.html
+++ b/Template/index.html
@@ -13,7 +13,7 @@
 
     <!-- include google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i"rel="stylesheet">
 
 
   </head>
@@ -65,8 +65,10 @@
           </figure>
           <div class="box right tight dark">
             <div class="text-wrapper">
-              <p>Lorem ipsum dolor sit amet</p>
-              <a href="#" class="button">Lenketekst</a>
+              <blockquote cite="http://nets.no">
+                <p>condidunt ut labore et dolore magna aliqua. Sgdfg Tempor incididunt ut le</p>
+                <footer>Navn navnesen, i Nets strømmen</footer>
+              </blockquote>
             </div>
           </div>
         </div>
