--- a/Template/css/style.css
+++ b/Template/css/style.css
@@ -179,7 +179,7 @@ a.button::before {
   width: 100%;
   height: 100%;
   position: absolute;
-  background: url('../img/latin_pattern.png');
+  background: url('../img/triangle_pattern.jpg');
   z-index: 1;
   opacity: .1;
   -webkit-filter: grayscale(100%); /* Chrome, Safari, Opera */
@@ -271,7 +271,7 @@ body > header > h1 {
   height: 2rem;
   background: #fff;
   position: fixed;
-  z-index: 2;
+  z-index: 20;
   top: 1rem;
   right: 1rem;
   border-radius: 100%;
