--- a/Template/kontakt.html
+++ b/Template/kontakt.html
@@ -10,30 +10,12 @@
     <!-- include stylesheets -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_kontakt.css">
 
     <!-- include google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i"rel="stylesheet">
 
-    <style>
-    .intro {
-      padding-bottom: 120vh;
-    }
-
-    #kontakt {
-      margin-left: 0;
-      text-align: center;
-    }
-
-    .box > .text-wrapper {
-      padding: 4rem 4rem;
-    }
-
-    .left {
-      float:left;
-    }
-
-    </style>
   </head>
 
   <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
@@ -65,47 +47,71 @@
       <section class="intro">
         <div class="container">
             <div class="text-wrapper">
-              <h2>Kontakt</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-              <p style="font-size: 1.8rem; display=inline;">
-                +47 428 83 247
-              </p>
-              <p style="font-size= 1rem;">
-                <a href="mailto:epost@epost.no">epost</a>
-              </p>
+
+                <h2>Kontakt</h2>
+                <p id="introtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+                <div class="right">
+                  <p class="phone">
+                    +47 428 83 247
+                  </p>
+                  <p class="mailto">
+                    <a href="mailto:epost@epost.no">epost</a>
+                  </p>
+
+              </div>
             </div>
+              <div class="left">
+                <img id="handskrift" src="img/marlene.png" alt="">
+                <br><br><br><p>Hilsen Juan Carlos Pequeno</p>
+              </div>
+        </div>
+
+        <div class="container">
           <div id="kontakt" class="box full dark" >
             <div class="text-wrapper">
               <h3>Be om pristilbud</h3>
               <p>Hva ønsker du pristilbud på?</p>
+
               <a href="#" class="button left">Cateringtjenester</a>
               <a href="#" class="button right">Kantinedrift</a>
+
               <h3>Om arrangementet</h3>
               <p>Da Carlo kan levere cateringtjenester til alle typer arrangementer. Fortell oss litt mer om hva du ønsker hjelp til.</p>
               <form>
-                <input type="text" id="place" name="sted"/>
+                <input type="text" id="place" name="sted" value="Sted"/>
                 <label for="place">Sted</label>
-                <input type="date" id="date" name="dato" />
+
+                <input class="right" type="date" id="date" name="dato" value="Dato"/>
                 <label for="date">Dato</label>
-                <input type="text" id="guestNo" name="antallGjester"/>
+
+                <input type="text" id="guestNo" name="antallGjester" value="Antall gjester"/>
                 <label for="guestNo">Antall Gjester</label>
-                <select id="meny" name="meny">
+
+              <div class="styledSelect">
+                <select  id="meny" name="meny" value="Ønsket meny">
                   <option value="meny1">Meny 1</option>
                   <option value="meny2">Meny 2</option>
                   <option value="meny3">Meny 3</option>
                 </select>
                 <label for="meny">Ønsket meny</label>
-                <textarea id="info" name="extraInfo"/>Ekstrainformasjon og eventuelle spørsmål</textarea>
+              </div>
+
+                <textarea id="info" name="extraInfo"/>Ekstra informasjon og eventuelle spørsmål</textarea>
+
                 <h3>Om deg</h3>
                 <p>Legg igjen din kontaktinformasjon, så tar vi kontakt så snart som mulig.</p>
-                <input type="text" id="name" name="navn"/>
+                <input type="text" id="name" name="navn"value="Ditt navn"/>
                 <label for="name">Ditt navn</label>
-                <input type="tel" id="number" name="telefonnummer"/>
+                <input type="tel" id="number" name="telefonnummer" value="Ditt telefonnummer"/>
                 <label for="number">Ditt telefonnummer</label>
-                <input type="email" id="email" name="epost"/>
+                <input type="email" id="email" name="epost" value="Din e-postadresse"/>
                 <label for="email">Din e-postadresse</label>
-
+                <div class="midstiltKnapp">
+                <a id="send" href="#" name="submit" class="button wide">Send prisforespørsel</a>
+                </div>
               </form>
+
             </div>
           </div>
       </div>
